styles/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Raleway', sans-serif;
    color: white;
}

body {
    height: 100vh;
    width: 100vw;
    overflow: auto;
    scrollbar-color: rgb(179, 20, 19) rgb(8, 33, 41);
}

/* prevent scrollbar shift */
html {
    scrollbar-gutter: auto;
    overflow-x: hidden;
}

.maxWidth {
    max-width: 1440px;
    margin: 0 auto;
}

/* spinner */
.spinnerDiv {
    display: flex;
    position: absolute;
    height: 100vh;
    width: 100vw;
    background-color: rgba(128, 128, 128, 0.5);
    z-index: 2;
}

.spinner {
    display: none;
    position: absolute;
    z-index: 2;
    width: 200px;
    height: 200px;
    top: 40%;
    left: calc(50% - 110px);
    border: 10px solid #f3f3f3;
    border-top: 10px solid rgb(26, 50, 58);
    border-radius: 50%;
    animation: spin 1s linear infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

/* header */
header {
    height: 100px;
    width: 100%;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
    background-color: rgb(8, 33, 41);
}

.logoDiv {
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 10px;

}

#logo {
    height: 40px;
    width: auto;
}

.indexLink {
    text-decoration: none;
}

.indexLink:hover {
    transition: 0.3s;
    filter: drop-shadow(0px 0px 2px white);
}

.logoDiv:hover>h2 {
    transition: 0.3s;
    color: rgb(179, 20, 19) !important;
}

.navContent {
    display: flex;
    height: 100%;
    align-items: center;
    justify-content: space-between;
}

.navLinks {
    display: flex;
    height: 100%;
    gap: 24px;
    align-items: center;
    flex-direction: row;
}

.linkStyle {
    text-decoration: none;
    font-size: 20px;
    font-weight: 600;
    color: white
}

.activeLink {
    text-decoration: none;
    font-size: 20px;
    font-weight: 600;

}

.linkStyle:hover,
.activeLink {
    transition: 0.3s;
    text-decoration: underline;
    text-decoration-thickness: 3px;
    text-underline-offset: 8px;
    color: rgb(179, 20, 19)
}

/* content */
.mainDiv {
    display: flex;
    flex-direction: column;
    width: 100%;
    min-height: 100vh;
    position: relative;
    overflow-x: hidden;
    background-color: rgb(5, 23, 30);
}

.mainContent {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.mainContentSearch {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px 0;
    gap: 20px;
}

.content {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.pokeCard {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    align-items: center;
    margin: 20px 20px;
    background-color: rgb(8, 33, 41);
    border-radius: 20px;
    width: 300px;
    height: 405px;
}

.pokeCardHeader {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding-bottom: 15px;
    font-size: larger;
}

.currentPokeCardHeader {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 15px;
}

.pokeID {
    display: flex;
    position: relative;
    left: 10px;
}

.pokeCardID {
    display: flex;
    position: relative;
    left: -110px;
    bottom: -19px;
    font-size: larger;
}

.pokemonName {
    display: flex;
    width: 100%;
    justify-content: center;
}

.contentImg {
    width: 300px;
}

.pokemonType {
    display: flex;
    width: 100%;
    padding-top: 10px;
    justify-content: center;
    gap: 20px;
}

.pokeTypeImg {
    height: 32px;
    width: 32px;
}

.moreButton {
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    background-color: rgb(8, 33, 41);
    margin-top: 20px;
    margin-bottom: 40px;
    border-radius: 10px;
}

.moreButton:hover {
    cursor: pointer;
    filter: drop-shadow(0px 0px 2px white);
}

.currentContent {
    display: flex;
    justify-content: center;
    position: fixed;
    z-index: 1;
    filter: drop-shadow(0px 0px 4px white);
}

.currentPokeCard {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    background-color: rgb(8, 33, 41);
    border-radius: 20px;
    width: 530px;
}

.currentContentImgDiv {
    display: flex;
    justify-content: center;
    width: 100%;
}

.currentContentImg {
    width: 250px;
}

.switchPokemon {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
}

.switchImgLeft {
    cursor: pointer;
    height: 50px;
    width: 80px;
    transform: rotate(180deg);
}

.switchImgRight {
    cursor: pointer;
    height: 50px;
    width: 80px;
}

.switchImgLeft:hover,
.switchImgRight:hover,
.attributeButton:hover,
.activeAttributeButton:hover,
.pokeCard:hover {
    filter: drop-shadow(0px 0px 2px white);
}

.attributeDiv {
    width: 100%;
}

.attributeButtonDiv {
    display: flex;
    width: 100%;
    justify-content: space-between;
    padding-top: 10px;
}

.activeAttributeButton {
    filter: drop-shadow(0px 0px 2px white);
}

.attributeButton {
    cursor: pointer;
    background-color: rgb(5, 23, 30);
    width: 33%;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
}

.stopScrolling {
    height: 100vh;
    overflow-y: hidden;
}

/* the close button */
.close {
    position: absolute;
    right: 10px;
    color: white;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
}

.close:hover,
.close:focus {
    color: rgb(179, 20, 19);
    text-decoration: none;
    cursor: pointer;
}

.mainStats {
    display: flex;
    min-height: 300px;
    padding: 30px;
    align-items: flex-start;
    justify-content: center;
    flex-direction: row;
    flex-wrap: wrap;
}

.currentStats {

}

.evoChainStats {

}

.mainAttribute {
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 28.5%;
}

.mainResults {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.statsAttribute {
    display: flex;
    flex-direction: column;
    gap: 16px;
    width: 100%;
}

.attribute {
    display: flex;
    align-items: center;
}

.attributeName {
    width: 130px;
}

.innerScale {
    height: 18px;
    background-color: rgb(179, 20, 19);
    border-radius: 20px;
}

.outerScale {
    display: flex;
    justify-content: flex-start;
    width: 308px;
    border: 4px solid rgb(50, 24, 6);
    border-radius: 20px;
}

.chainContentImg {
    height: 125px;
    width: auto;
}

.evolutionChainDiv {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
}

.arrowDiv {
    display: flex;
    height: 125px;
    align-items: center;
}

.chainContentArrow {
    height: 50px;
    width: 30px;
}

.searchInput {
    color: black;
    padding: 10px 10px;
    font-size: 16px;
    width: 250px;
    margin-left: 8px;
}

.warning {
    display: flex;
    justify-content: center;
    color: rgb(179, 20, 19);
    font-size: 25px;
    align-items: center;
    flex: 1;
}

/* footer */
footer {
    margin-top: auto;
    height: 150px;
    background-color: rgb(8, 33, 41);
}

.footerContent {
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.footerIcons {
    display: flex;
    gap: 32px;
}

.footerIcons img {
    width: auto;
    height: 40px;
}

.footerIcons img:hover {
    filter: drop-shadow(0px 0px 2px white);
}

/* responsive menu */
.respMenuClosed {
    transform: translateX(100%);
}

.burgerDesktop {
    display: none;
}

.respMenuBox {
    display: none;
}

/* impressum */
.impressum {
    width: 100%;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap: 8px;
    padding: 16px;
    word-break: break-word;
}

#impressum {
    text-decoration: none;
    font-size: 20px;
}

#impressum:hover {
    transition: 0.3s;
    text-decoration: underline;
    text-decoration-thickness: 3px;
    text-underline-offset: 8px;
    color: rgb(179, 20, 19)
}

@media (max-width: 1500px) {
    .resp {
        padding-left: 64px;
        padding-right: 64px;
    }
}

@media (max-width: 950px) {
    body {
        scrollbar-width: none;
        scrollbar-color: transparent;
    }

    .spinner {
        left: calc(50% - 100px);
    }

    .respMenuBox {
        display: flex;
        flex-direction: column;
        position: absolute;
        top: 100px;
        right: 0;
        padding-top: 10px;
        background-color: rgb(8, 33, 41);
        border-top: 4px solid white;
        border-left: 4px solid white;
        border-bottom: 4px solid white;
        border-top-left-radius: 20px;
        border-bottom-left-radius: 20px;
        height: 150px;
        z-index: 2;
        transition: all 250ms ease-in-out;
        padding-right: 8px;
    }

    .burgerMobile {
        display: flex;
        height: 48px;
        width: auto;
        border: 1px solid white;
        border-radius: 10px;
        padding: 10px;
    }

    .burgerMobile:hover {
        transition: 0.2s;
        filter: drop-shadow(0px 0px 2px rgb(179, 20, 19));
        border-color: rgb(179, 20, 19);
        cursor: pointer;
    }

    .linksDesktop {
        display: none;
    }

    .linkStyle {
        padding-bottom: 16px;
        padding-left: 8px;
    }

    .activeLink {
        padding-bottom: 16px;
        padding-left: 8px;
    }

    .linkStyle:first-child {
        padding-top: 16px;
    }

    nav {
        padding: 16px;
    }

    .pokeCard {
        margin: 20px 20px;
        width: 280px;
    }

    .contentImg {
        width: 280px;
    }
}

@media (max-width: 560px) {
    .resp {
        padding-left: 10px;
        padding-right: 10px;
    }

    .footerContent {
        display: flex;
        justify-content: space-around;
        align-items: center;
        flex-direction: column;
        padding: 20px 0;
    }

    .currentPokeCard {
        width: 300px;
    }

    .mainStats {
        display: flex;
        justify-content: center;
        padding: 10px;
        flex-direction: row;
        align-content: center;
    }

    .mainAttribute {
        display: flex;
        flex-direction: column;
        gap: 20px;
        width: 125px;
    }

    .mainResults {
        width: 120px;
        word-break: break-word;
    }

    .attribute {
        text-align: center;
        display: flex;
        align-items: center;
        flex-direction: column;
        gap: 10px;
    }

    .outerScale {
        transform: scale(0.9, 1);
    }

    .chainContentImg {
        height: 150px;
        width: auto;
    }

    .chainContentArrow {
        height: 70px;
        width: 40px;
    }

    .arrowDiv {
        display: flex;
        height: 150px;
        align-items: center;
    }
}

